--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
   <body>
     <main class="container">
       <h1>Skin Type Detector (Local Model)</h1>
+      <p class="intro" style="text-align:center;max-width:780px;margin:12px auto 8px;line-height:1.5;color:#374151;font-size:16px;">Upload a photo or take a picture using your device camera. After the image appears in the preview, tap <strong>Analyze now</strong> to run the model.</p>
+      <p style="text-align:center;max-width:780px;margin:8px auto 18px;line-height:1.4;color:#4b5563;">Results and recommendations will be shown below. Your image stays on your device; only the analysis result and optional feedback are sent to the server.</p>
 
       <div class="uploader">
-        <label class="file-label" for="imageInput">Choose image</label>
-        <input id="imageInput" type="file" accept="image/*" />
-        <button id="startCameraBtn" class="btn" type="button">Use Camera</button>
-        <button id="analyzeBtn" class="btn" type="button">Analyze now</button>
-      </div>
+        <div class="file-full">
+          <label class="file-label" for="imageInput">Choose image</label>
+          <input id="imageInput" type="file" accept="image/*" />
+        </div>
 
-      <div class="camera">
-        <video id="cameraVideo" autoplay playsinline></video>
-        <button id="captureBtn" class="btn" type="button" style="display:none">Capture</button>
+        <div class="camera-full">
+          <button id="startCameraBtn" class="btn" type="button">Use Camera</button>
+          <div class="camera-join">
+            <button id="cameraFrontBtn" class="btn small" type="button">Front</button>
+            <button id="cameraBackBtn" class="btn small" type="button">Back</button>
+          </div>
+        </div>
+
+        
       </div>
 
       <div id="status" class="status">Loading model...</div>
@@ -32,8 +39,16 @@
         <p>Analyzing image...</p>
       </div>
 
+      <div id="status" class="status">Loading model...</div>
+
       <div class="preview">
+        <video id="cameraVideo" autoplay playsinline style="display:none"></video>
+        <button id="captureBtn" class="btn" type="button" style="display:none">Capture</button>
         <img id="previewImage" alt="Image preview" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='300'%3E%3Crect fill='%23f0f0f0' width='400' height='300'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='16' fill='%236b7280'%3EImage preview will appear here%3C/text%3E%3C/svg%3E" />
+      </div>
+
+      <div style="text-align:center;margin:12px 0;">
+        <button id="analyzeBtn" class="btn" type="button" style="display:none">Analyze now</button>
       </div>
 
       <section id="results" class="results" aria-live="polite"></section>
